--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "formik": "^1.3.1",
     "i18next": "^11.9.1",
     "i18next-browser-languagedetector": "^2.2.3",
+    "material-design-icons": "^3.0.1",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-helmet": "^5.2.0",
@@ -22,7 +23,8 @@
     "build": "react-scripts-ts build",
     "test": "react-scripts-ts test --env=jsdom",
     "eject": "react-scripts-ts eject",
-    "storybook": "start-storybook -p 9001 -c storybook"
+    "storybook": "start-storybook -p 9001 -c storybook",
+    "lint": "tslint 'src/**/**.{ts,tsx}'"
   },
   "devDependencies": {
     "@storybook/addon-actions": "^4.0.0-alpha.24",
@@ -30,6 +32,7 @@
     "@types/i18next": "^11.9.1",
     "@types/i18next-browser-languagedetector": "^2.0.1",
     "@types/jest": "^23.3.5",
+    "@types/material-ui": "^0.21.5",
     "@types/node": "^10.11.6",
     "@types/react": "^16.4.16",
     "@types/react-dom": "^16.0.9",
