--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "devDependencies": {
     "@storybook/addon-actions": "^4.0.0-alpha.24",
     "@storybook/react": "^4.0.0-alpha.24",
+    "@types/enzyme": "^3.1.14",
     "@types/i18next": "^11.9.1",
     "@types/i18next-browser-languagedetector": "^2.0.1",
     "@types/jest": "^23.3.5",
@@ -39,12 +40,15 @@
     "@types/react-helmet": "^5.0.7",
     "@types/react-i18next": "^7.8.2",
     "@types/react-router-dom": "^4.3.1",
+    "@types/react-test-renderer": "^16.0.3",
     "@types/storybook__addon-actions": "^3.4.1",
     "@types/storybook__react": "^3.0.9",
     "babel-core": "^6.26.3",
+    "enzyme": "^3.7.0",
     "eslint": "^5.6.1",
     "eslint-config-airbnb": "^17.1.0",
     "jest": "^23.6.0",
+    "react-test-renderer": "^16.5.2",
     "ts-loader": "^5.2.1",
     "tslint": "^5.11.0",
     "typescript": "^3.1.2"
